--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,13 @@
+* {
+    outline: 1px solid black;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -5,4 +15,21 @@ body {
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  overflow: auto;
+  margin: 50px auto;
+}
+
+.selector {
+  width: 600px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-around;
 }
