--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,7 @@ th {
   padding: 10px;
   /*font-size: 1.2em;*/
   font-weight: 900;
+  transition: background-color .2s;
 }
 
 td {
@@ -51,6 +52,11 @@ button {
 
 input {
   padding: 10px;
+}
+
+li {
+  list-style: none;
+  transition: background-color .5s;
 }
 
 .desc {
@@ -84,7 +90,46 @@ input {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-around;
+  margin: 10px;
 }
+
+.loader {
+  font-size: 3em;
+  height: 366px;
+  line-height: 366px;
+}
+
+.currs {
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.currs li {
+  margin: 2px;
+  padding: 8px;
+  font-weight: 700;
+  cursor: pointer;
+  text-transform: capitalize;
+}
+
+.selected {
+  color: #d0021b;
+  background-color: #eee;
+  border-radius: 5px;
+  transition: background-color 0s;
+}
+
+/*select {
+  background: none;
+  border: none;
+  font-size: 1em;
+  font-weight: 900;
+}
+
+option {
+  font-weight: normal;
+}*/
 
 /*select {
   background-color: silver;
