--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,7 +20,6 @@ body {
 table {
   width: 600px;
   margin: 30px 0;
-  /*border: 1px solid silver;*/
   text-align: center;
 }
 
@@ -29,17 +28,16 @@ table {
 }
 
 th {
-  /*background: silver;*/
   width: 300px;
   padding: 10px;
-  /*font-size: 1.2em;*/
   font-weight: 900;
   transition: background-color .2s;
 }
 
 td {
   min-width: 100px;
-  padding: 10px 5px;
+  padding: 8px;
+  line-height: 1.8;
 }
 
 tr:not(:last-child) td {
@@ -59,22 +57,6 @@ li {
   transition: background-color .5s;
 }
 
-.desc {
-  width: 600px;
-  line-height: 1.7;
-  text-align: center;
-}
-
-.data-src {
-  margin: 0 0 20px 0;
-  font-size: 12px;
-  text-align: center
-}
-
-.data-src a {
-  font-weight: bold;
-}
-
 .app {
   display: flex;
   flex-direction: column;
@@ -91,6 +73,32 @@ li {
   flex-wrap: nowrap;
   justify-content: space-around;
   margin: 10px;
+}
+
+.selector > * {
+  margin: 10px 0;
+}
+
+.desc {
+  width: 600px;
+  line-height: 1.7;
+  text-align: center;
+  padding: 10px;
+}
+
+.data-src {
+  margin: 0 0 20px 0;
+  font-size: 13px;
+  text-align: center
+}
+
+.data-src a {
+  font-weight: bold;
+  text-decoration: none;
+  color: #d1021b;
+  background-color: #eee;
+  padding: 4px;
+  border-radius: 3px;
 }
 
 .loader {
@@ -114,7 +122,7 @@ li {
 }
 
 .selected {
-  color: #d0021b;
+  color: #d1021b;
   background-color: #eee;
   border-radius: 5px;
   transition: background-color 0s;
