--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,20 +41,18 @@ td {
 }
 
 tr:not(:last-child) td {
-  border-bottom: 1px solid silver;
+  border-bottom: 1px solid #eee;
 }
 
 button {
   padding: 10px;
 }
 
-input {
-  padding: 10px;
-}
 
 li {
   list-style: none;
   transition: background-color .5s;
+  text-align: center;
 }
 
 .app {
@@ -77,6 +75,58 @@ li {
 
 .selector > * {
   margin: 10px 0;
+}
+
+.hlist {
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.hlist li {
+  margin: 2px;
+  padding: 8px;
+  font-weight: 700;
+  cursor: pointer;
+  text-transform: capitalize;
+}
+
+.fileinput {
+  /*padding: 10px;*/
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.selected {
+  color: #d1021b;
+  background-color: #eee;
+  border-radius: 5px;
+  transition: background-color 0s;
+}
+
+
+#fileinput + li {
+  padding: 0;
+  cursor: default;
+  width: 150px;
+  text-transform: none;
+}
+
+#fileinput + li label {
+  cursor: pointer;
+  padding: 8px;
+  display: block;
+  height: 100%;
+}
+
+#fileinput + li p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .desc {
@@ -106,39 +156,3 @@ li {
   height: 366px;
   line-height: 366px;
 }
-
-.currs {
-  display:flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.currs li {
-  margin: 2px;
-  padding: 8px;
-  font-weight: 700;
-  cursor: pointer;
-  text-transform: capitalize;
-}
-
-.selected {
-  color: #d1021b;
-  background-color: #eee;
-  border-radius: 5px;
-  transition: background-color 0s;
-}
-
-/*select {
-  background: none;
-  border: none;
-  font-size: 1em;
-  font-weight: 900;
-}
-
-option {
-  font-weight: normal;
-}*/
-
-/*select {
-  background-color: silver;
-}*/
