--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 * {
-    /*outline: 1px solid black;*/
+    outline: 1px solid black;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
@@ -17,6 +17,7 @@ body {
     sans-serif;
   font-weight: 300;
 }
+
 
 table {
   width: 600px;
@@ -41,40 +42,26 @@ td {
   line-height: 1.8;
 }
 
-tr:not(:last-child) td {
-  border-bottom: 1px solid #eee;
-}
-
 button {
   padding: 10px;
 }
 
 
-li {
-  list-style: none;
-  transition: background-color .5s;
-  text-align: center;
-}
-
-.app {
+.inputs {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  overflow: auto;
-  margin: 50px auto;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.selector {
+.input {
   width: 600px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 10px;
 }
 
-.selector > * {
+.input > * {
   margin: 10px 0;
 }
 
@@ -113,7 +100,7 @@ li {
 #fileinput + li {
   padding: 0;
   cursor: default;
-  width: 150px;
+  width: 135px;
   text-transform: none;
 }
 
@@ -130,26 +117,15 @@ li {
   text-overflow: ellipsis;
 }
 
+#db li {
+  width: 135px;
+}
+
 .desc {
   width: 600px;
   line-height: 1.7;
   text-align: center;
   padding: 10px;
-}
-
-.data-src {
-  margin: 0 0 20px 0;
-  font-size: 13px;
-  text-align: center
-}
-
-.data-src a {
-  font-weight: bold;
-  text-decoration: none;
-  color: #d1021b;
-  background-color: #eee;
-  padding: 4px;
-  border-radius: 3px;
 }
 
 .loader {
