--- a/client/src/style.css
+++ b/client/src/style.css
@@ -46,6 +46,10 @@ th {
   cursor: pointer;
 }
 
+th#conv {
+  cursor: auto;
+}
+
 li {
   list-style: none;
 }
@@ -60,14 +64,14 @@ li {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 10px;
 }
 
 .hlist li {
-  margin: 2px;
+  margin: 5px;
   padding: 8px;
   font-weight: 700;
   cursor: pointer;
-  text-transform: capitalize;
   transition: background-color 0s;
 }
 
@@ -115,6 +119,10 @@ li {
   background-color: #eee;
   border-radius: 4px;
   transition: background-color 0s;
+}
+
+.disabled {
+  color: #ccc;
 }
 
 .desc {
