--- a/client/src/style.css
+++ b/client/src/style.css
@@ -11,6 +11,7 @@ body, html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   text-align: center;
+  color: #333;
 }
 
 .app {
